Spaced out the repository icons slightly to avoid the charts overlapping in some situations

--- a/Gitria/Content/bootstrap.css
+++ b/Gitria/Content/bootstrap.css
@@ -364,13 +364,14 @@ a:focus {
     width: 100px;
     max-width: 100px;
     margin-left: 30px;
-    margin-top: 30px;
+    margin-top: 45px;
 }
 
 .appDeletionsContainer {
     position: absolute;
     width: 160px;
     height: 160px;
+    margin-top: 15px;
 }
 
 .appAdditionsContainer {
@@ -378,7 +379,7 @@ a:focus {
     width: 130px;
     height: 130px;
     margin-left: 15px;
-    margin-top: 15px;
+    margin-top: 30px;
 }
 
 .applicationText {
